Add support for jdk.internal.misc.Unsafe (#391)