@@ -62,6 +62,17 @@ test {
     if (buildProfile == 'default') {
         exclude '**/experimental/**'
     }
+    doFirst {
+        if (JavaVersion.current() >= JavaVersion.VERSION_1_9) {
+            jvmArgs += [
+                    '--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED'
+            ]
+        }
+    }
+}
+
+javadoc {
+    options.addBooleanOption('-add-exports=java.base/jdk.internal.misc=ALL-UNNAMED', true)
 }
 
 tasks.register('compileBuildHelper', JavaCompile) {
@@ -201,6 +212,8 @@ if (buildProfile == 'experimental') {
                         '-XX:+EnableJVMCI',
                         '--enable-preview',
                         '--add-modules', 'jdk.internal.vm.ci',
+                        '--add-modules', 'jdk.unsupported',
+
                         '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.code=ALL-UNNAMED',
                         '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.code.site=ALL-UNNAMED',
                         '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.hotspot=ALL-UNNAMED',
@@ -216,6 +229,8 @@ if (buildProfile == 'experimental') {
         options.compilerArgs += [
                 '--enable-preview',
                 '--add-modules', 'jdk.internal.vm.ci,jdk.incubator.vector',
+                '--add-modules', 'jdk.unsupported',
+
                 '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.code=ALL-UNNAMED',
                 '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.code.site=ALL-UNNAMED',
                 '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.hotspot=ALL-UNNAMED',
@@ -229,6 +244,9 @@ if (buildProfile == 'experimental') {
         jvmArgs.set([
                 '--enable-preview',
                 '--add-modules', 'jdk.internal.vm.ci,jdk.incubator.vector',
+                '--add-modules', 'jdk.unsupported',
+
+                '--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED',
                 '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.code=ALL-UNNAMED',
                 '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.code.site=ALL-UNNAMED',
                 '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.hotspot=ALL-UNNAMED',
